<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Login">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/app_name"
        android:layout_marginTop="@dimen/big_margin"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/titles_size"
        android:gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/user_name_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/user_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.4"
        ></>

    <EditText
        android:id="@+id/user_password_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/user_password"
        app:layout_constraintTop_toBottomOf="@id/user_name_text"
        app:layout_constraintStart_toStartOf="@id/user_name_text"
        >
    </>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>