<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/user_image_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.1"
            />

        <TextView
            android:id="@+id/user_firstName_profile_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_firstName"
            android:textColor="@color/menuTextColor"
            android:layout_marginStart="@dimen/big_margin"
            app:layout_constraintTop_toBottomOf="@id/user_image_profile"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/alerter_text_medium"/>

        <TextView
            android:id="@+id/user_lastName_profile_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:layout_marginTop="@dimen/big_margin"
            android:textColor="@color/menuTextColor"
            app:layout_constraintTop_toBottomOf="@id/user_firstName_profile_textView"
            app:layout_constraintStart_toStartOf="@id/user_firstName_profile_textView"
            android:textSize="@dimen/alerter_text_medium"/>

        <TextView
            android:id="@+id/user_email_profile_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="@dimen/big_margin"
            android:textColor="@color/menuTextColor"
            app:layout_constraintTop_toBottomOf="@id/user_lastName_profile_textView"
            app:layout_constraintStart_toStartOf="@id/user_lastName_profile_textView"
            android:textSize="@dimen/alerter_text_medium"/>

        <TextView
            android:id="@+id/user_phone_number_profile_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/salon_phoneNumber"
            android:textColor="@color/menuTextColor"
            android:layout_marginStart="@dimen/big_margin"
            app:layout_constraintTop_toBottomOf="@id/user_email_profile_textView"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/alerter_text_medium"/>

        <EditText
            android:id="@+id/user_firstName_profile_editText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            app:layout_constraintStart_toEndOf="@id/user_firstName_profile_textView"
            app:layout_constraintTop_toTopOf="@id/user_firstName_profile_textView"
            app:layout_constraintBottom_toBottomOf="@id/user_firstName_profile_textView"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/user_lastName_profile_editText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            app:layout_constraintStart_toEndOf="@id/user_lastName_profile_textView"
            app:layout_constraintTop_toTopOf="@id/user_lastName_profile_textView"
            app:layout_constraintBottom_toBottomOf="@id/user_lastName_profile_textView"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/user_email_profile_editText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            app:layout_constraintStart_toEndOf="@id/user_email_profile_textView"
            app:layout_constraintTop_toTopOf="@id/user_email_profile_textView"
            app:layout_constraintBottom_toBottomOf="@id/user_email_profile_textView"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/user_phone_number_profile_editText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            app:layout_constraintStart_toEndOf="@id/user_phone_number_profile_textView"
            app:layout_constraintTop_toTopOf="@id/user_phone_number_profile_textView"
            app:layout_constraintBottom_toBottomOf="@id/user_phone_number_profile_textView"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>